--- a/src_new/.env
+++ b/src_new/.env
@@ -1,7 +1,7 @@
 APP_NAME="cccrental"
 APP_ENV=production
 APP_KEY=base64:2hV6vr3/J2ubQwAVGBibKite+7QobRevg6dx5yAYA0k=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE='Asia/Jakarta'
 APP_URL=https://www.ccrental.my.id
 ASSET_URL=https://www.ccrental.my.id
